fix bugs on small devices

--- a/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
+++ b/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
@@ -70,6 +70,10 @@
   .title{
     padding:0 10px;
   }
+  .categoryWrapper{
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 
